Fix horizontal alignment on NavBar.

--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -14,12 +14,13 @@ body {
     margin: 0;
     display: flex;
     place-items: center;
-    
     background-color: #1a2027;
     color: #fff;
     justify-content: space-between;
     box-shadow: 0 0 10px rgb(0 0 0 / 8%);
 }
+
+
 
 .site-title {
     color: inherit;
@@ -33,18 +34,21 @@ body {
     padding: 0;
     list-style: none;
     display: flex;
-    gap: 1rem;
     position: relative;
     align-items: stretch;
     height: 70px;
-    
+    gap: 2rem;
 }
 
 .menu li {
     display: inline-block;
-    width: 90px;
+    width: 100%;
     align-items: center;
     text-align: center;
+}
+
+.menu li.active {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .menu > li:hover > a {
@@ -61,7 +65,7 @@ body {
     color: inherit;
     text-decoration: none;
     height: 100%;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     padding: 0.25rem;
 }
@@ -69,7 +73,7 @@ body {
 .menu li a {
     color: #fff;
     opacity: 1;
-    font-size: 16px;
+    font-size: 18px;
     transition: opacity 0.25s;
 }
 
